// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ODropdown tests > render correctly with items 1`] = `
"<div data-oruga="dropdown" class="o-dropdown">
  <div class="o-dropdown__trigger" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-disabled="false" aria-controls="v-0"><button class="">Component Trigger Label</button></div>
  <!--teleport start-->
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <div id="v-0" tabindex="-1" class="o-dropdown__menu" role="listbox" aria-multiselectable="false" popover="" style="display: none; position-area: bottom; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;" data-position="bottom">
      <div id="v-0-1" data-oruga="dropdown-item" data-id="dropdown-1" class="o-dropdown__item o-dropdown__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">A</div>
      <div id="v-0-2" data-oruga="dropdown-item" data-id="dropdown-2" class="o-dropdown__item o-dropdown__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">B</div>
      <div id="v-0-3" data-oruga="dropdown-item" data-id="dropdown-3" class="o-dropdown__item o-dropdown__item--clickable" role="option" tabindex="-1" aria-selected="false" aria-hidden="false" aria-disabled="false">C</div>
      <!--v-if-->
    </div>
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`ODropdown tests > render correctly with options 1`] = `
"<div data-oruga="dropdown" class="o-dropdown">
  <div class="o-dropdown__trigger" aria-haspopup="menu" aria-disabled="false">Some Trigger Label</div>
  <!--teleport start-->
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <div id="v-0" tabindex="-1" class="o-dropdown__menu" role="menu" aria-hidden="false" popover="" style="display: none; position-area: bottom; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;" data-position="bottom">
      <div id="v-0-1" data-oruga="dropdown-item" data-id="dropdown-1" class="o-dropdown__item o-dropdown__item--clickable" role="menuitem" tabindex="-1" aria-hidden="false" aria-disabled="false"><span>Item 1</span></div>
      <div id="v-0-2" data-oruga="dropdown-item" data-id="dropdown-2" class="o-dropdown__item o-dropdown__item--clickable" role="menuitem" tabindex="-1" aria-hidden="false" aria-disabled="false"><span>Item 2</span></div>
      <div id="v-0-3" data-oruga="dropdown-item" data-id="dropdown-3" class="o-dropdown__item o-dropdown__item--clickable" role="menuitem" tabindex="-1" aria-hidden="false" aria-disabled="false"><span>Item 3</span></div>
      <!--v-if-->
    </div>
  </transition-stub>
  <!--teleport end-->
</div>"
`;
